# nexterm

./: .env.example  .gitignore  API_DOCUMENTATION.md  AUTH_MIDDLEWARE.md  BUILD_DEPLOY.md  Cargo.toml  DATABASE_CONFIG.md  FRONTEND_INTEGRATION.md  MIGRATIONS.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  RUSTLS_CONFIG.md  SERVER_API.md  SESSION_GUIDE.md  SFTP_API.md  SFTP_CHUNKED_TRANSFER.md  SFTP_STREAMING_DOWNLOAD.md  STATIC_ASSETS.md  USER_API.md  WEBSOCKET_GUIDE.md  build.sh  check_deps.sh  dhat-heap.json  pnpm-lock.yaml  update_handlers.py
.cargo/: config.toml
.github/workflows/: release.yml
fronted/: .env.development  .env.example  .env.production.example  MONACO_OFFLINE_CONFIG.md  PROJECT_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  SERVER_MANAGEMENT.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
fronted/src/: App.tsx  i18n.ts  index.css  main.tsx  vite-env.d.ts
fronted/src/api/: auth.ts  client.ts  deployment.ts  server.ts
fronted/src/components/: confirm-dialog.tsx  pwa-update-prompt.tsx  terminal-context-menu.tsx
fronted/src/config/: monaco-config.ts
fronted/src/contexts/: auth-context.tsx  deployment-context.tsx  (+3 more)
migrations/: 20260116000001_create_users.sql  20260116000002_create_ssh_connections.sql  20260116000003_create_remote_servers.sql  20260116000004_create_operation_logs.sql  20260116000005_add_unique_group_name.sql  20260117000006_create_deployment_tables.sql  20260117000007_alter_deployment_tables_autoincrement.sql  20260117000008_create_execution_history.sql
src/: logger.rs  main.rs
src/deployment/: handler.rs  mod.rs  model.rs  service.rs
src/server/: handlers.rs  mod.rs  models.rs  service.rs
src/sftp/: handler.rs  mod.rs  session.rs
src/ssh/: handler.rs  mod.rs  session.rs
src/user/: handlers.rs  middleware.rs  mod.rs  models.rs  service.rs
src/util/: buffer_pool.rs  mod.rs
(+34 files in other folders)
