[package]
name = "nexterm"
version = "1.0.0"
edition = "2024"

[dependencies]
# SSH 相关 - 使用 rustls
russh = { version = "0.56.0" }
russh-keys = { version = "0.49.2" }
russh-sftp = "2.1.1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
time = { version = "0.3", features = ["local-offset"] }
log = "0.4.29"

# 异步运行时 - 使用 rustls
tokio = { version = "1.49.0", features = ["full"] }

# 序列化
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.100"

# Web 框架 - 使用 rustls
axum = { version = "0.8.8", features = ["ws"] }
futures-util = "0.3"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }

# 数据库 - SQLite
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "macros"], default-features = false }

# 其他
chrono = "0.4"
bcrypt = "0.18.0"
validator = { version = "0.20.0", features = ["derive"] }
async-trait = "0.1.89"

# 静态资源嵌入
rust-embed = { version = "8.0", features = ["compression"] }
mime_guess = "2.0"

deadpool = { version = "0.12.3", features = ["rt_tokio_1"] }
bytes = "1.11.0"
# 优化配置
[profile.release]
opt-level = 3              # 最高优化级别
lto = "fat"                # 完整 LTO（链接时优化）
codegen-units = 1          # 单个代码生成单元，更好的优化
strip = true               # 移除调试符号
panic = "abort"            # panic 时直接终止，减小二进制大小
overflow-checks = false    # 禁用溢出检查（生产环境）

# 依赖优化
[profile.release.package."*"]
opt-level = 3              # 所有依赖也使用最高优化
strip = true

# 开发配置优化
[profile.dev]
opt-level = 0              # 开发时不优化，编译更快
debug = true

# 开发依赖优化（加快开发时编译）
[profile.dev.package."*"]
opt-level = 2              # 依赖使用中等优化